--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Calculator</title>
-</head>
-<body>
-    <h1>Calculator :D</h1>
+  </head>
+  <body>
     <div class="container">
-        
+        <div class="display">12345</div>
+        <div class="buttons">
+            <button class="function" id="clear">AC</button>
+            <button class="function" id="sign">+/-</button>
+            <button class="function" id="percentage">%</button>
+            <button class="operator" id="divide">/</button>
+            <button class="number" id="seven">7</button>
+            <button class="number" id="eight">8</button>
+            <button class="number" id="nine">9</button>
+            <button class="operator" id="multiply">*</button>
+            <button class="number" id="four">4</button>
+            <button class="number" id="five">5</button>
+            <button class="number" id="six">6</button>
+            <button class="operator" id="subtract">-</button>
+            <button class="number" id="one">1</button>
+            <button class="number" id="two">2</button>
+            <button class="number" id="three">3</button>
+            <button class="operator" id="add">+</button>
+            <button class="number" id="zero">0</button>
+            <button class="function" id="decimal">.</button>
+            <button class="operator" id="equals">=</button>
+        </div>
     </div>
-</body>
-<script type="text/javascript" src="script.js"></script>
+  </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
