--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   </head>
   <body>
     <div class="container">
-        <div class="display">12345</div>
+        <div class="display" id="display"></div>
         <div class="buttons">
-            <button class="function" id="clear">AC</button>
-            <button class="function" id="sign">+/-</button>
-            <button class="function" id="percentage">%</button>
-            <button class="operator" id="divide">/</button>
-            <button class="number" id="seven">7</button>
-            <button class="number" id="eight">8</button>
-            <button class="number" id="nine">9</button>
-            <button class="operator" id="multiply">*</button>
-            <button class="number" id="four">4</button>
-            <button class="number" id="five">5</button>
-            <button class="number" id="six">6</button>
-            <button class="operator" id="subtract">-</button>
-            <button class="number" id="one">1</button>
-            <button class="number" id="two">2</button>
-            <button class="number" id="three">3</button>
-            <button class="operator" id="add">+</button>
-            <button class="number" id="zero">0</button>
-            <button class="function" id="decimal">.</button>
-            <button class="operator" id="equals">=</button>
+            <button class="function" id="clear" value="clear">AC</button>
+            <button class="function" id="sign" value="sign">+/-</button>
+            <button class="function" id="percentage" value="percentage">%</button>
+            <button class="operator" id="divide" value="/">/</button>
+            <button class="number" id="seven" value="7">7</button>
+            <button class="number" id="eight" value="8">8</button>
+            <button class="number" id="nine" value="9">9</button>
+            <button class="operator" id="multiply" value="*">*</button>
+            <button class="number" id="four" value="4">4</button>
+            <button class="number" id="five" value="5">5</button>
+            <button class="number" id="six" value="6">6</button>
+            <button class="operator" id="subtract" value="-">-</button>
+            <button class="number" id="one" value="1">1</button>
+            <button class="number" id="two" value="2">2</button>
+            <button class="number" id="three" value="3">3</button>
+            <button class="operator" id="add" value="+">+</button>
+            <button class="number" id="zero" value="0">0</button>
+            <button class="function" id="decimal" value=".">.</button>
+            <button class="operator" id="equals" value="=">=</button>
         </div>
     </div>
   </body>
